@@ -1,3 +1,13 @@
+2009-09-14  Chris Marrin  <cmarrin@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        Add LayoutTests infrastructure to enable and disable webgl tests.
+        https://bugs.webkit.org/show_bug.cgi?id=29254
+
+        * Scripts/run-webkit-tests:
+        * Scripts/webkitdirs.pm:
+
 2009-09-14  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Darin Adler.
